DESKTOP: fix flex gap

--- a/src/Components/Card/styles.module.scss
+++ b/src/Components/Card/styles.module.scss
@@ -2,7 +2,8 @@
 @import '../../App.module';
 
 .card {
-  width: 30%;
+  flex-grow: 1;
+  width: 29%;
 }
 
 .card_header {
@@ -66,6 +67,7 @@
     font-weight: normal;
     font-size: 48px;
     margin-bottom: .5rem;
+    word-wrap: break-word;
   }
 
   span {
