--- a/src/Components/Control/styles.module.scss
+++ b/src/Components/Control/styles.module.scss
@@ -3,6 +3,7 @@
 .control_wrapper {
   display: flex;
   flex-direction: column;
+  width: 25%;
 }
 
 .profile_wrapper {
