--- a/src/Components/Schedule/styles.module.scss
+++ b/src/Components/Schedule/styles.module.scss
@@ -1,6 +1,12 @@
+@import '../../variable';
+
 .activity_wrapper {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-content: space-between;
   flex-wrap: wrap;
+  width: 75%;
+  column-gap: $gap;
+  row-gap: $gap;
+  margin-left: $gap;
 }
