--- a/src/_variable.scss
+++ b/src/_variable.scss
@@ -2,6 +2,9 @@
 $mobile             : 375;
 $desktop            : 1440;
 
+// general
+$gap                : 30px;
+
 // color theme
 $light-red          : hsl(15, 100%, 70%);
 $soft-blue          : hsl(195, 74%, 62%);
